app/styles/main.scss
 // Bourbon & Neat
@import '../../bower_components/bourbon/dist/bourbon';
@import '../../bower_components/neat/app/assets/stylesheets/neat';
//Fonts
$english: 'IM Fell English SC', serif;
$sancreek: 'Sancreek', cursive;
$jacques: 'Jacques Francois Shadow', cursive;


// Custom Styles
body {
  font-family: $english;
  color: green;
}

.door {
  width: 100%;
  height: 100%;
  position: absolute;
  background: url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQpPePXpexT7NsfOQJkS2zi6XnRsj9uWI5ZhXY9klnQhCyfG9Wn) no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  z-index: 3;

  #enter {
    width: 10%;
    height: 50px;
    margin-left: 45%;
    margin-top: 337px;
    font-size: 20px;
    vertical-align: middle;
    background-color: HSLA(21, 38%, 91%, 1)
  }
}

.gameOn {
  position: relative;
  width: 100%;
  background: url(http://www.tatouagedesigns.com/photos/22164P-2T.jpg) no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  z-index: 2;
  overflow: hidden;

.game {
  margin-left: auto;
  margin-right: auto;
  width: 1100px;
  overflow: hidden;
  font-size: 25px;
  text-align: center;
  line-height: 30px;
  padding: 60px;

  h1 {
    font-family: $jacques;
    font-size: 80px;
    color: black;
    text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
  }

  h2 {
    font-family: $sancreek;
    font-size: 50px;
    color: red;
  }
}

.left {
  float: left;
  width: 350px;

//large dog image
  .dog {
    float: left;
    width: 200px;
    height: 200px;
    margin-left: 106px;

    img {
      width: 200px;
      height: 200px;
      border-radius: 50px;
    }
  }

//thumbnail dog images
  .goodies {
    float: left;
    width: 400px;
    height: 100px;

    li {
      float: left;
      display: inline-block;
      margin-right: 20px;
      list-style: none;

      img {
        width: 100px;
        height: 100px;
        border-radius: 30px;
      }
    }
  }
}

#fight {
  width: 20%;
  border-radius: 30px;
  margin-top: 55px;
  font-family: $sancreek;
  color: red;
  background-color: yellow;
}

.right {
  float: right;
  width: 350px;
  height: 500px;

//large cat image
  .cat {
    float: right;
    width: 200px;
    height: 200px;
    margin-right: 106px;

    img {
      width: 200px;
      height: 200px;
      border-radius: 50px;
    }
  }
//thumbnail cat images
  .baddies {
    float: right;
    width: 400px;
    height: 100px;

    li {
      float: left;
      display: inline-block;
      margin-right: 10px;
      list-style: none;

      img {
        width: 100px;
        height: 100px;
        border-radius: 30px;
      }
    }
  }
}

}

